can register now

--- a/Flash Chat iOS13/Views/Base.lproj/Main.storyboard
+++ b/Flash Chat iOS13/Views/Base.lproj/Main.storyboard
@@ -373,10 +373,12 @@
         </scene>
     </scenes>
     <designables>
-        <designable name="y7D-jv-BlJ"/>
+        <designable name="y7D-jv-BlJ">
+            <size key="intrinsicContentSize" width="307.5" height="60"/>
+        </designable>
     </designables>
     <inferredMetricsTieBreakers>
-        <segue reference="ppR-hD-eNP"/>
+        <segue reference="Be7-jB-YNH"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="paperplane.fill" catalog="system" width="128" height="118"/>
